--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -19,6 +19,7 @@ jobs:
           remotes::install_cran("rmarkdown")
           remotes::install_cran("tidyverse")
           remotes::install_cran("here")
+          remotes::install_cran("igraph")
         shell: Rscript {0}
       - name: Render README
         run: Rscript -e 'rmarkdown::render("README.Rmd")'
